Capstone project implementation